Fix portfolio teaser button and lead spacing in mobile

--- a/src/components/portfolioTeaser/portfolio-teaser.scss
+++ b/src/components/portfolioTeaser/portfolio-teaser.scss
@@ -107,7 +107,6 @@
   @include font-size(16px);
   color: $scorpion;
   margin-top: 0;
-  margin-bottom: auto;
 
   @media screen and (min-width: $bp-small) {
     @include font-size(18px);
@@ -115,6 +114,11 @@
 
   @media screen and (min-width: $bp-medium) {
     @include font-size(20px);
+    margin-bottom: $gutter * 2;
+  }
+
+  @media screen and (min-width: $bp-medium-wide) {
+    margin-bottom: auto;
   }
 }
 
